<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".activity.discovery.HRSActivity">

    <include
        android:id="@+id/title_bars"
        layout="@layout/activity_title_bar" />


    <RelativeLayout
        android:id="@+id/ll_head"
        android:layout_below="@+id/title_bars"
        android:layout_width="fill_parent"
        android:layout_height="360dp"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/text_hrs_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="80.0dip"
            android:ellipsize="end"
            android:freezesText="true"
            android:maxLines="1"
            android:text="@string/not_available_value"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/text_hrs_value"
            android:layout_marginTop="-10.0dip"
            android:text="@string/hrs_value_unit"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/text_hrs_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="80.0dip"
           android:textColor="@color/white"
            android:text="@string/not_available"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/text_hrs_position_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@id/text_hrs_value"
            android:layout_marginTop="-10.0dip"
            android:text="@string/hrs_position_label"
            android:textSize="16sp" />

        <FrameLayout
            android:id="@+id/graph_hrs"
            android:layout_width="fill_parent"
            android:layout_height="220.0dip"
            android:layout_below="@id/text_hrs_position_label"
            android:layout_marginTop="10.0dip" />
    </RelativeLayout>

    <Button
        android:id="@+id/action_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50.0dip"
        android:onClick="onStartClicked"
        android:text="@string/hrs_start" />

</RelativeLayout>